# incident-response-and-systems

./: README.md
forensic-investigations/: README.md
forensic-investigations/case-acme-bittorrent/: Acme_Corporate_BitTorrent_Forensic_Analysis.docx
forensic-investigations/case-craig-earl/: README.md
forensic-investigations/forensic-investigations/case-acme-bittorrent/: README.md
forensic-investigations/forensic-investigations/case-craig-earl/: README.md
forensic-investigations/forensic-investigations/case-helen-honoka/: README.md
forensic-investigations/forensic-investigations/forensic-investigations/case-acme-bittorrent/: Additional_Forensic_Case_Investigation.docx
supplemental-work/: README.md
supplemental-work/supplemental-work/penetration-testing/: README.md
systems-engineering/: README.md
systems-engineering/robotics-tennis-ball-collector/: README.md  package.xml  perception.py
systems-engineering/robotics-tennis-ball-collector/launch/: action.launch
systems-engineering/systems-engineering/network-architecture-tac357/: README.md
systems-engineering/systems-engineering/robotics-tennis-ball-collector/: README.md
systems-engineering/systems-engineering/robotics-tennis-ball-collector/code/: README.md
systems-engineering/systems-engineering/robotics-tennis-ball-collector/code/final_project_rm/: CMakeLists.txt  README.md  camera.py  package.xml
